@@ -20,16 +20,16 @@ public class DepartmentsTest {
 
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> rsl = Departments.fillGaps(input);
         assertThat(rsl, is(expect));
     }
 
     @Test
     public void whenManyMissedWithNaturalOrder() {
-        List<String> input = Arrays.asList("k1/sk1", "k2", "k2/sk1", "k2/sk2", "k2/sk1/ssk1/sssk1");
-        List<String> expect = Arrays.asList(
+        List<String> input = List.of("k1/sk1", "k2", "k2/sk1", "k2/sk2", "k2/sk1/ssk1/sssk1");
+        List<String> expect = List.of(
                 "k1", "k1/sk1", "k2", "k2/sk1", "k2/sk1/ssk1", "k2/sk1/ssk1/sssk1", "k2/sk2"
         );
         List<String> rsl = Departments.fillGaps(input);
@@ -39,8 +39,8 @@ public class DepartmentsTest {
 
     @Test
     public void whenMissedWithNaturalOrder() {
-        List<String> input = Arrays.asList("k1/sk1", "k2", "k2/sk1", "k1/sk2", "k2/sk1/ssk1/sssk1");
-        List<String> expect = Arrays.asList(
+        List<String> input = List.of("k1/sk1", "k2", "k2/sk1", "k1/sk2", "k2/sk1/ssk1/sssk1");
+        List<String> expect = List.of(
                 "k1", "k1/sk1", "k1/sk2", "k2", "k2/sk1", "k2/sk1/ssk1", "k2/sk1/ssk1/sssk1"
         );
         List<String> rsl = Departments.fillGaps(input);
@@ -50,8 +50,8 @@ public class DepartmentsTest {
 
     @Test
     public void whenManyMissedWithDepDescComp() {
-        List<String> input = Arrays.asList("k1/sk1", "k2", "k2/sk1", "k2/sk2", "k2/sk1/ssk1/sssk1");
-        List<String> expect = Arrays.asList(
+        List<String> input = List.of("k1/sk1", "k2", "k2/sk1", "k2/sk2", "k2/sk1/ssk1/sssk1");
+        List<String> expect = List.of(
                 "k2", "k2/sk1", "k2/sk1/ssk1", "k2/sk1/ssk1/sssk1", "k2/sk2", "k1", "k1/sk1"
         );
         List<String> rsl = Departments.fillGaps(input);
@@ -61,10 +61,10 @@ public class DepartmentsTest {
 
     @Test
     public void whenManyMissedAndNotValid() {
-        List<String> input = Arrays.asList(
+        List<String> input = List.of(
                 "k1/sk1", "k2", "k1/sk2", "k2/sk1", "k2/sk2", "k2/sk1/ssk1/sssk1"
         );
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "k1", "k1/sk1", "k1/sk2", "k2", "k2/sk1",
                 "k2/sk1/ssk1", "k2/sk1/ssk1/sssk1", "k2/sk2"
         );
@@ -75,8 +75,8 @@ public class DepartmentsTest {
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> rsl = Departments.fillGaps(input);
         assertThat(rsl, is(expect));
     }
